src/bootstrap/test/v0_7/rejects/03_capture_mut/main.zg
# requires: v0.7

fn main() {
    mut x := 0
    spawn fn() {
        print x
    }()
}

main()
